Fix item type validation test and Java 21 deprecations (#562)
* Fix item type validation test and Java 21 deprecations

Generate the expected invalid item type message from the current
thing description schema instead of hard-coding the full item type
enumeration. This keeps the test stable when new item types are added
to the XSD.

Also replace deprecated Java 21 API usage for Locale and URL creation.

Signed-off-by: Wouter Born <github@maindrain.net>